package online.talkandtravel.model.enums;

/**
 * Enumeration representing the different types of chats within the application.
 *
 * <ul>
 *   <li>{@code PRIVATE} - A chat involving only two users.
 *   <li>{@code GROUP} - A chat involving multiple users.
 * </ul>
 */
public enum ChatType {
  PRIVATE,
  GROUP
}
